# phuckcancer

./: .env.example  .env.frontend.example  .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CONTRIBUTING.md  FUTURE_VISION.md  LICENSE  MEDICAL_SAFETY.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.cjs
app/: __init__.py  assistant_prompts.py  cancer_importer.py  cbioportal_connector.py  cbioportal_models.py  cbioportal_normalizer.py  config.py  database.py  drug_comparison.py  drug_comparison_runner.py  drug_evidence_models.py  drug_library.py  drug_scoring.py  evidence_matcher.py  genomics_parser.py  local_llm.py  main.py  mammal_api_client.py  mammal_checkpoint_config.py  mammal_claim_extractor.py  mammal_engine.py  mammal_importer.py  mammal_mcp_client.py  mammal_model_registry.py  mammal_official_tasks.py  mammal_output_parser.py  mammal_pipeline.py  mammal_prompt_builder.py  mammal_providers.py  mammal_result_parser.py  mammal_task_router.py  mammal_task_runner.py  models.py  molecular_evidence.py  pathway_explorer.py  plain_english.py  reporting.py  resistance_watch.py  review_workflow.py  risk_flagger.py  (+3 more)
db/: README.md  reset_demo_database.sql  schema.sql  seed_cancer_demo.sql
sample_data/: cancer_genomics_fixture.json  cbioportal_clinical_fixture.json  cbioportal_mutations_fixture.json  cbioportal_studies_fixture.json  mammal_output_fixture.json  molecular_evidence_fixture.json  pathology_report_fixture.txt  resistance_signal_fixture.json  (+1 more)
src/: App.tsx  api.ts  (+1 more)
(+63 files in other folders)
